--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,6 @@ steps:
 - script: |
     npm install
     npm install -g protractor
-    webdriver-manager update
+    node node_modules/protractor/bin/webdriver-manager update
     npm run test2
   displayName: 'npm install and build'
