--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,5 +18,5 @@ steps:
 - script: |
     npm install
     node node_modules/protractor/bin/webdriver-manager update
-    npm run protractor
+    npm run test
   displayName: 'npm install and build'
